Add some jdls related details to README.md